put >= instead of = bug

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             var minutes = today.getMinutes().toString();
             var seconds = today.getSeconds().toString();
             // Puts it in twelve hour format
-            if(hours >= 12){
+            if(hours > 12){
                 hours -= 12;
             }
             // I didn't know if you wanted by 00:00:00 format always but these if statements take care of that
